@@ -49,6 +49,41 @@ namespace tut
 			wktreader(&gf)
 		{}
 
+		void testInputOutput(const std::string& WKT,
+				const std::string& ndrWKB,
+				const std::string& xdrWKB)
+		{
+			GeomPtr gWKT(wktreader.read(WKT));
+
+			// NDR input
+			std::stringstream ndr_in(ndrWKB);
+			GeomPtr gWKB_ndr(wkbreader.readHEX(ndr_in));
+			ensure("NDR input",
+				gWKB_ndr->equalsExact(gWKT.get()) );
+
+			// XDR input
+			std::stringstream xdr_in(xdrWKB);
+			GeomPtr gWKB_xdr(wkbreader.readHEX(xdr_in));
+			ensure("XDR input",
+				gWKB_xdr->equalsExact(gWKT.get()) );
+
+			// Compare geoms read from NDR and XDR
+			ensure( gWKB_xdr->equalsExact(gWKB_ndr.get()) );
+
+			// NDR output
+			std::stringstream ndr_out;
+			ndrwkbwriter.writeHEX(*gWKT, ndr_out);
+			ensure_equals("NDR output",
+				ndr_out.str(), ndr_in.str());
+
+			// XDR output
+			std::stringstream xdr_out;
+			xdrwkbwriter.writeHEX(*gWKT, xdr_out);
+			ensure_equals("XDR output",
+				xdr_out.str(), xdr_in.str());
+
+		}
+
 	};
 
 	typedef test_group<test_wkbreader_data> group;
@@ -61,25 +96,23 @@ namespace tut
 	// Test Cases
 	//
 
-	// 1 - Read a point
+	// 1 - Read/write a point in XDR and NDR format
 	template<>
 	template<>
 	void object::test<1>()
 	{         
-		// NDR
-		std::stringstream sin("010100000000000000000000000000000000000000");
+		testInputOutput(
 
-		GeomPtr gWKB(wkbreader.readHEX(sin));
-		GeomPtr gWKT(wktreader.read("POINT(0 0)"));
+			// WKT
+			"POINT(0 0)",
 
-		ensure( gWKB->equalsExact(gWKT.get()) );
+			// NDR HEXWKB
+			"010100000000000000000000000000000000000000",
 
-		std::stringstream sout;
+			// XDR HEXWKB
+			"000000000100000000000000000000000000000000"
 
-		ndrwkbwriter.writeHEX(*gWKB, sout);
-
-		ensure_equals(sout.str(), sin.str());
-
+		);
 	}
 
 	// 2 - Read a linestring
@@ -87,18 +120,19 @@ namespace tut
 	template<>
 	void object::test<2>()
 	{         
-		// NDR
-		std::stringstream sin("010200000002000000000000000000F03F000000000000004000000000000008400000000000001040");
 
-		GeomPtr gWKB (wkbreader.readHEX(sin));
-		GeomPtr gWKT (wktreader.read("LINESTRING(1 2, 3 4)"));
+		testInputOutput(
 
-		ensure( gWKB->equalsExact(gWKT.get()) );
+			// WKT
+			"LINESTRING(1 2, 3 4)",
 
-		std::stringstream sout;
-		ndrwkbwriter.writeHEX(*gWKB, sout);
+			// NDR HEXWKB
+			"010200000002000000000000000000F03F000000000000004000000000000008400000000000001040",
 
-		ensure_equals(sout.str(), sin.str());
+			// XDR HEXWKB
+			"0000000002000000023FF0000000000000400000000000000040080000000000004010000000000000"
+
+		);
 
 	}
 
@@ -107,18 +141,19 @@ namespace tut
 	template<>
 	void object::test<3>()
 	{         
-		// NDR
-		std::stringstream sin("0103000000020000000500000000000000000000000000000000000000000000000000244000000000000000000000000000002440000000000000244000000000000000000000000000002440000000000000000000000000000000000400000000000000000000400000000000000040000000000000004000000000000018400000000000001840000000000000104000000000000000400000000000000040");
+		testInputOutput(
 
-		GeomPtr gWKB (wkbreader.readHEX(sin));
-		GeomPtr gWKT (wktreader.read("POLYGON((0 0, 10 0, 10 10, 0 10, 0 0),(2 2, 2 6, 6 4, 2 2))"));
+			// WKT
+			"POLYGON((0 0, 10 0, 10 10, 0 10, 0 0),(2 2, 2 6, 6 4, 2 2))",
 
-		ensure( gWKB->equalsExact(gWKT.get()) );
+			// NDR HEXWKB
+			"0103000000020000000500000000000000000000000000000000000000000000000000244000000000000000000000000000002440000000000000244000000000000000000000000000002440000000000000000000000000000000000400000000000000000000400000000000000040000000000000004000000000000018400000000000001840000000000000104000000000000000400000000000000040",
 
-		std::stringstream sout;
-		ndrwkbwriter.writeHEX(*gWKB, sout);
+			// XDR HEXWKB
+			"0000000003000000020000000500000000000000000000000000000000402400000000000000000000000000004024000000000000402400000000000000000000000000004024000000000000000000000000000000000000000000000000000440000000000000004000000000000000400000000000000040180000000000004018000000000000401000000000000040000000000000004000000000000000"
 
-		ensure_equals(sout.str(), sin.str());
+		);
+
 	}
 
 	// 4 - Read a multipoint
@@ -126,18 +161,20 @@ namespace tut
 	template<>
 	void object::test<4>()
 	{         
-		// NDR
-		std::stringstream sin("010400000005000000010100000000000000000000000000000000000000010100000000000000000024400000000000000000010100000000000000000024400000000000002440010100000000000000000000000000000000002440010100000000000000000000000000000000000000");
 
-		GeomPtr gWKB (wkbreader.readHEX(sin));
-		GeomPtr gWKT (wktreader.read("MULTIPOINT(0 0, 10 0, 10 10, 0 10, 0 0)"));
+		testInputOutput(
 
-		ensure( gWKB->equalsExact(gWKT.get()) );
+			// WKT
+			"MULTIPOINT(0 0, 10 0, 10 10, 0 10, 0 0)",
 
-		std::stringstream sout;
-		ndrwkbwriter.writeHEX(*gWKB, sout);
+			// NDR HEXWKB
+			"010400000005000000010100000000000000000000000000000000000000010100000000000000000024400000000000000000010100000000000000000024400000000000002440010100000000000000000000000000000000002440010100000000000000000000000000000000000000",
 
-		ensure_equals(sout.str(), sin.str());
+			// XDR HEXWKB
+			"000000000400000005000000000100000000000000000000000000000000000000000140240000000000000000000000000000000000000140240000000000004024000000000000000000000100000000000000004024000000000000000000000100000000000000000000000000000000"
+
+		);
+
 	}
 
 	// 5 - Read a multilinestring
@@ -145,18 +182,20 @@ namespace tut
 	template<>
 	void object::test<5>()
 	{         
-		// NDR
-		std::stringstream sin("010500000002000000010200000005000000000000000000000000000000000000000000000000002440000000000000000000000000000024400000000000002440000000000000000000000000000024400000000000002440000000000000344001020000000400000000000000000000400000000000000040000000000000004000000000000018400000000000001840000000000000104000000000000034400000000000000040");
 
-		GeomPtr gWKB (wkbreader.readHEX(sin));
-		GeomPtr gWKT (wktreader.read("MULTILINESTRING((0 0, 10 0, 10 10, 0 10, 10 20),(2 2, 2 6, 6 4, 20 2))"));
+		testInputOutput(
 
-		ensure( gWKB->equalsExact(gWKT.get()) );
+			// WKT
+			"MULTILINESTRING((0 0, 10 0, 10 10, 0 10, 10 20),(2 2, 2 6, 6 4, 20 2))",
 
-		std::stringstream sout;
-		ndrwkbwriter.writeHEX(*gWKB, sout);
+			// NDR HEXWKB
+			"010500000002000000010200000005000000000000000000000000000000000000000000000000002440000000000000000000000000000024400000000000002440000000000000000000000000000024400000000000002440000000000000344001020000000400000000000000000000400000000000000040000000000000004000000000000018400000000000001840000000000000104000000000000034400000000000000040",
 
-		ensure_equals(sout.str(), sin.str());
+			// XDR HEXWKB
+			"000000000500000002000000000200000005000000000000000000000000000000004024000000000000000000000000000040240000000000004024000000000000000000000000000040240000000000004024000000000000403400000000000000000000020000000440000000000000004000000000000000400000000000000040180000000000004018000000000000401000000000000040340000000000004000000000000000"
+
+		);
+
 	}
 
 	// 6 - Read a multipolygon
@@ -164,18 +203,20 @@ namespace tut
 	template<>
 	void object::test<6>()
 	{         
-		// NDR
-		std::stringstream sin("0106000000020000000103000000020000000500000000000000000000000000000000000000000000000000244000000000000000000000000000002440000000000000244000000000000000000000000000002440000000000000000000000000000000000400000000000000000000400000000000000040000000000000004000000000000018400000000000001840000000000000104000000000000000400000000000000040010300000001000000040000000000000000004E400000000000004E400000000000004E400000000000004940000000000080514000000000000044400000000000004E400000000000004E40");
 
-		GeomPtr gWKB (wkbreader.readHEX(sin));
-		GeomPtr gWKT (wktreader.read("MULTIPOLYGON(((0 0, 10 0, 10 10, 0 10, 0 0),(2 2, 2 6, 6 4, 2 2)),((60 60, 60 50, 70 40, 60 60)))"));
+		testInputOutput(
 
-		ensure( gWKB->equalsExact(gWKT.get()) );
+			// WKT
+			"MULTIPOLYGON(((0 0, 10 0, 10 10, 0 10, 0 0),(2 2, 2 6, 6 4, 2 2)),((60 60, 60 50, 70 40, 60 60)))",
 
-		std::stringstream sout;
-		ndrwkbwriter.writeHEX(*gWKB, sout);
+			// NDR HEXWKB
+			"0106000000020000000103000000020000000500000000000000000000000000000000000000000000000000244000000000000000000000000000002440000000000000244000000000000000000000000000002440000000000000000000000000000000000400000000000000000000400000000000000040000000000000004000000000000018400000000000001840000000000000104000000000000000400000000000000040010300000001000000040000000000000000004E400000000000004E400000000000004E400000000000004940000000000080514000000000000044400000000000004E400000000000004E40",
 
-		ensure_equals(sout.str(), sin.str());
+			// XDR HEXWKB
+			"000000000600000002000000000300000002000000050000000000000000000000000000000040240000000000000000000000000000402400000000000040240000000000000000000000000000402400000000000000000000000000000000000000000000000000044000000000000000400000000000000040000000000000004018000000000000401800000000000040100000000000004000000000000000400000000000000000000000030000000100000004404E000000000000404E000000000000404E000000000000404900000000000040518000000000004044000000000000404E000000000000404E000000000000"
+
+		);
+
 	}
 
 	// 7 - Read a collection 
@@ -183,18 +224,20 @@ namespace tut
 	template<>
 	void object::test<7>()
 	{         
-		// NDR
-		std::stringstream sin("010700000006000000010100000000000000000000000000000000000000010200000002000000000000000000F03F00000000000000400000000000000840000000000000104001030000000200000005000000000000000000000000000000000000000000000000002440000000000000000000000000000024400000000000002440000000000000000000000000000024400000000000000000000000000000000004000000000000000000004000000000000000400000000000000040000000000000184000000000000018400000000000001040000000000000004000000000000000400104000000050000000101000000000000000000000000000000000000000101000000000000000000244000000000000000000101000000000000000000244000000000000024400101000000000000000000000000000000000024400101000000000000000000000000000000000000000105000000020000000102000000050000000000000000000000000000000000000000000000000024400000000000000000000000000000244000000000000024400000000000000000000000000000244000000000000024400000000000003440010200000004000000000000000000004000000000000000400000000000000040000000000000184000000000000018400000000000001040000000000000344000000000000000400106000000020000000103000000020000000500000000000000000000000000000000000000000000000000244000000000000000000000000000002440000000000000244000000000000000000000000000002440000000000000000000000000000000000400000000000000000000400000000000000040000000000000004000000000000018400000000000001840000000000000104000000000000000400000000000000040010300000001000000040000000000000000004E400000000000004E400000000000004E400000000000004940000000000080514000000000000044400000000000004E400000000000004E40");
 
-		GeomPtr gWKB(wkbreader.readHEX(sin));
-		GeomPtr gWKT(wktreader.read("GEOMETRYCOLLECTION(POINT(0 0),LINESTRING(1 2,3 4),POLYGON((0 0,10 0,10 10,0 10,0 0),(2 2,2 6,6 4,2 2)),MULTIPOINT(0 0,10 0,10 10,0 10,0 0),MULTILINESTRING((0 0,10 0,10 10,0 10,10 20),(2 2,2 6,6 4,20 2)),MULTIPOLYGON(((0 0,10 0,10 10,0 10,0 0),(2 2,2 6,6 4,2 2)),((60 60,60 50,70 40,60 60))))"));
+		testInputOutput(
 
-		ensure( gWKB->equalsExact(gWKT.get()) );
+			// WKT
+			"GEOMETRYCOLLECTION(POINT(0 0),LINESTRING(1 2,3 4),POLYGON((0 0,10 0,10 10,0 10,0 0),(2 2,2 6,6 4,2 2)),MULTIPOINT(0 0,10 0,10 10,0 10,0 0),MULTILINESTRING((0 0,10 0,10 10,0 10,10 20),(2 2,2 6,6 4,20 2)),MULTIPOLYGON(((0 0,10 0,10 10,0 10,0 0),(2 2,2 6,6 4,2 2)),((60 60,60 50,70 40,60 60))))",
 
-		std::stringstream sout;
-		ndrwkbwriter.writeHEX(*gWKB, sout);
+			// NDR HEXWKB
+			"010700000006000000010100000000000000000000000000000000000000010200000002000000000000000000F03F00000000000000400000000000000840000000000000104001030000000200000005000000000000000000000000000000000000000000000000002440000000000000000000000000000024400000000000002440000000000000000000000000000024400000000000000000000000000000000004000000000000000000004000000000000000400000000000000040000000000000184000000000000018400000000000001040000000000000004000000000000000400104000000050000000101000000000000000000000000000000000000000101000000000000000000244000000000000000000101000000000000000000244000000000000024400101000000000000000000000000000000000024400101000000000000000000000000000000000000000105000000020000000102000000050000000000000000000000000000000000000000000000000024400000000000000000000000000000244000000000000024400000000000000000000000000000244000000000000024400000000000003440010200000004000000000000000000004000000000000000400000000000000040000000000000184000000000000018400000000000001040000000000000344000000000000000400106000000020000000103000000020000000500000000000000000000000000000000000000000000000000244000000000000000000000000000002440000000000000244000000000000000000000000000002440000000000000000000000000000000000400000000000000000000400000000000000040000000000000004000000000000018400000000000001840000000000000104000000000000000400000000000000040010300000001000000040000000000000000004E400000000000004E400000000000004E400000000000004940000000000080514000000000000044400000000000004E400000000000004E40",
 
-		ensure_equals(sout.str(), sin.str());
+			// XDR HEXWKB
+			"0000000007000000060000000001000000000000000000000000000000000000000002000000023FF00000000000004000000000000000400800000000000040100000000000000000000003000000020000000500000000000000000000000000000000402400000000000000000000000000004024000000000000402400000000000000000000000000004024000000000000000000000000000000000000000000000000000440000000000000004000000000000000400000000000000040180000000000004018000000000000401000000000000040000000000000004000000000000000000000000400000005000000000100000000000000000000000000000000000000000140240000000000000000000000000000000000000140240000000000004024000000000000000000000100000000000000004024000000000000000000000100000000000000000000000000000000000000000500000002000000000200000005000000000000000000000000000000004024000000000000000000000000000040240000000000004024000000000000000000000000000040240000000000004024000000000000403400000000000000000000020000000440000000000000004000000000000000400000000000000040180000000000004018000000000000401000000000000040340000000000004000000000000000000000000600000002000000000300000002000000050000000000000000000000000000000040240000000000000000000000000000402400000000000040240000000000000000000000000000402400000000000000000000000000000000000000000000000000044000000000000000400000000000000040000000000000004018000000000000401800000000000040100000000000004000000000000000400000000000000000000000030000000100000004404E000000000000404E000000000000404E000000000000404900000000000040518000000000004044000000000000404E000000000000404E000000000000"
+
+		);
+
 	}
 
 
